[package]
name = "circuits"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = {version = "0.15", default-features = false, features = [
	"bevy_asset",
	"bevy_sprite",
	"bevy_ui",
	"bevy_state",
	"x11",
	"png",
	"default_font",
	"dynamic_linking",
	"bevy_window",
]}
bevy_egui = "0.31"
arboard = "3.4.1"
petgraph = "0.6.5"

[profile.dev.package."*"]
opt-level = 3

[lints.clippy]
type_complexity = "allow"
